Commit 3 si finish